<resources>
    <string name="app_name">Splitstep</string>
    <string name="action_settings">Settings</string>

    <!-- Action -->
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Generic words -->
    <string name="notes">Notes</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="cones">Cones</string>
    <string name="rep_duration">Rep duration</string>
    <string name="set_duration">Set duration</string>
    <string name="rest_duration">Rest duration</string>

    <!--++++++++++++++++++++++++++++++++++++++++
            Exercise Type
    +++++++++++++++++++++++++++++++++++++++++-->
    <string name="exercise">Regular Exercise</string>
    <string name="exercise_short">Regular</string>
    <string name="timed_sets_exercise">Exercise with Timed Sets</string>
    <string name="timed_sets_exercise_short">with Timed Sets</string>
    <string name="reaction_exercise">Reaction Exercise</string>
    <string name="reaction_exercise_short">Reaction</string>

    <!--++++++++++++++++++++++++++++++++++++++++
            Exercise List
    +++++++++++++++++++++++++++++++++++++++++-->
    <string name="exercise_list_empty">No exercises created yet.</string>
    <string name="delete_exercise_title">Delete this Exercise?</string>
    <string name="reps_subtype">with Reps</string>
    <string name="timed_sets_subtype">with Timed Sets</string>
    
    <!-- Add Exercise -->
    <string name="add_exercise_title">Add New Exercise</string>

    <!--++++++++++++++++++++++++++++++++++++++++
            Exercise Detail
    +++++++++++++++++++++++++++++++++++++++++-->
    <string name="duration_value">%1$d minutes %2$d seconds</string>
    <string name="duration_value_seconds">%d seconds</string>
    <string name="start_exercise">Start Exercise</string>
    <!-- Duration Picker -->


    <!--++++++++++++++++++++++++++++++++++++++++
            Exercise Detail
    +++++++++++++++++++++++++++++++++++++++++-->
    <string name="sets_remaining">sets remaining</string>
    <string name="reps_count">%d reps</string>
    <string name="exercise_done_text">Done</string>
    <string name="exercise_rest_text">Rest</string>
    <string name="exercise_reps_text">%d reps</string>
    <string name="exercise_sets_text">%d\nsets</string>
    <string name="exercise_complete">Exercise Complete</string>
    <string name="exercise_pause">Pause</string>
    <string name="exercise_resume">Resume</string>

    <!-- Input Hint -->
    <string name="hint_exercise_name">Exercise Name</string>

    <!-- Error -->
    <string name="error_empty_exercise_name">Enter an exercise name.</string>
    <string name="error_exercise_already_exists">An exercise with the same name already exists.</string>
    <string name="error_zero_duration">Must be more than 0 seconds</string>

    <string name="channel_name">channel name</string>
    <string name="channel_description">channel description</string>

</resources>
