<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Time picker -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/minutes_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/minutes"
                    android:textSize="12sp" />

                <NumberPicker
                    android:id="@+id/minutes_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" />

            </LinearLayout>

            <NumberPicker
                android:id="@+id/colon_picker"
                android:layout_width="10dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:clickable="false"
                android:focusable="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/seconds_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/seconds"
                    android:textSize="12sp" />

                <NumberPicker
                    android:id="@+id/seconds_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/error_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/error_zero_duration"
        android:textColor="@color/error"
        android:visibility="gone" />
</LinearLayout>