<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageSwitcher
                android:id="@+id/favorite_imageswitcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/list_item_padding"/>

            <TextView
                android:id="@+id/exercise_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>
        </LinearLayout>

        <com.genenakagaki.splitstep.exercise.ui.view.NumberInput
            android:id="@+id/sets_numberinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:label="@string/sets"/>

        <com.genenakagaki.splitstep.exercise.ui.view.NumberInput
            android:id="@+id/reps_numberinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:label="@string/reps"/>

        <com.genenakagaki.splitstep.exercise.ui.view.NumberInput
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:label="string/"/>

        <LinearLayout
            android:id="@+id/set_duration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?selectableItemBackground"
            style="@style/InputLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rest_duration"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/set_duration_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rest_duration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?selectableItemBackground"
            style="@style/InputLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rest_duration"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/rest_duration_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
