<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/exercise_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="34sp"/>

        <!-- Main ProgressBar -->
        <LinearLayout
            android:id="@+id/main_progressbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true">

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/rest_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:progressDrawable="@drawable/progress_bar_circular"
                    android:progressTint="@color/restProgressColor"/>

                <Button
                    android:id="@+id/done_button"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/done_button"
                    android:text="@string/exercise_done_text"
                    android:textColor="@android:color/white"
                    android:visibility="invisible"/>

                <ProgressBar
                    android:id="@+id/timed_set_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:progressDrawable="@drawable/progress_bar_circular"
                    android:progressTint="@color/repsProgressColor"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/main_progress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="40sp"/>

                <!-- Complete Layout -->
                <LinearLayout
                    android:id="@+id/complete_layout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:background="@drawable/complete_button"
                    android:visibility="invisible">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_check"
                        android:tint="@android:color/white"
                        android:contentDescription="@string/exercise_complete"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/exercise_complete"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"/>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"/>

                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/main_progress_top_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/main_progressbar_container"
            android:gravity="center"
            android:text="reps"
            android:textSize="20sp"/>

        <!-- Sets ProgressBar -->
        <LinearLayout
            android:id="@+id/set_progressbar_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/sets_progressbar_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/sets_progressbar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:progressDrawable="@drawable/progress_bar_circular"
                        android:progressTint="@color/green" />

                    <TextView
                        android:id="@+id/sets_progress_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="45sp"/>
                </FrameLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/sets_remaining"
                android:textSize="20sp"/>
        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000">

        <TextView
            android:id="@+id/overlay_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="112sp"/>
    </FrameLayout>

</FrameLayout>